# yel

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: cli.rs  command.rs  display.rs  lib.rs  main.rs
src/entity/: book.rs
src/repository/: book.rs
src/value/: content_type.rs
